--- a/index.html
+++ b/index.html
@@ -6,23 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Shop - A sua loja de games</title>
     <link rel="stylesheet" href="./main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bungee&family=Jersey+25&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    
+
     <!-- HEADER -->
     <header>
         <div class="container">
             <h1>Games Shop</h1>
             <nav>
                 <ul>
-                    <li> Sobre a loja </li>
-                    <li> Contato </li>
+                    <li> <a href="#sobre">Sobre a Loja</a> </li>
+                    <li> <a href="#contato">Contato</a> </li>
                 </ul>
             </nav>
         </div>
     </header>
 
+    <section>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias distinctio dolore expedita culpa tenetur quae
+        delectus ab mollitia minus temporibus, fugit quas deleniti atque, error ducimus ad nihil aperiam. Cumque!
+    </section>
+
+    <footer>
+        <div class="container">
+            © Games Shop - Todos os direitos reservados - 2024
+        </div>
+    </footer>
 
 </body>
 
