Secao Sobre a Loja

--- a/index.html
+++ b/index.html
@@ -28,11 +28,53 @@
         </div>
     </header>
 
-    <section>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Alias distinctio dolore expedita culpa tenetur quae
-        delectus ab mollitia minus temporibus, fugit quas deleniti atque, error ducimus ad nihil aperiam. Cumque!
+    <!-- CORPO SOBRE A LOJA -->
+    <section id="sobre">
+        <div class="container">
+            <div class="articles">
+
+                <article>
+                    <img src="aaa.jpg">
+                </article>
+
+                <article>
+                    <p>
+                    <h2>Sobre a loja</h2>
+                    </p>
+                    </br>
+                    <p> Na Games Shop, nossa paixão é trazer diversão e entretenimento para os amantes de jogos de todas
+                        as
+                        idades. Desde os clássicos atemporais até as mais recentes inovações, estamos comprometidos em
+                        oferecer a melhor seleção de jogos para atender a todos os gostos e preferências. </p>
+                    </br>
+                    <p>Fundada por entusiastas de jogos há mais de uma década, a Games Shop nasceu do desejo de criar um
+                        espaço onde os jogadores pudessem encontrar tudo o que precisam sob o mesmo teto. Nossa equipe é
+                        composta por pessoas apaixonadas por jogos, prontas para oferecer orientação especializada e
+                        recomendações personalizadas para cada cliente.</p>
+                    </br>
+                    <p>Na Games Shop, não se trata apenas de vender jogos, mas de construir uma comunidade. Estamos
+                        dedicados a proporcionar experiências memoráveis, desde eventos de lançamento de jogos até
+                        competições emocionantes e noites de jogos para reunir amigos e famílias.</p>
+                    </br>
+                    <p> Além disso, estamos comprometidos com a excelência no atendimento ao cliente. Nossa equipe está
+                        sempre à disposição para ajudá-lo a encontrar o jogo perfeito, fornecer suporte técnico ou
+                        simplesmente compartilhar uma conversa sobre seus jogos favoritos.</p>
+                    </br>
+                    <p> Obrigado por fazer parte da comunidade Games Shop. Estamos ansiosos para ajudá-lo a descobrir
+                        novos
+                        mundos de diversão e aventura!</p>
+                </article>
+
+            </div>
+        </div>
     </section>
 
+    <!-- CORPO CONTATO -->
+    <section>
+
+    </section>
+
+    <!-- RODAPE -->
     <footer>
         <div class="container">
             © Games Shop - Todos os direitos reservados - 2024
