Criacao secao contatos

--- a/index.html
+++ b/index.html
@@ -42,27 +42,15 @@
                     <h2>Sobre a loja</h2>
                     </p>
                     </br>
-                    <p> Na Games Shop, nossa paixão é trazer diversão e entretenimento para os amantes de jogos de todas
-                        as
-                        idades. Desde os clássicos atemporais até as mais recentes inovações, estamos comprometidos em
-                        oferecer a melhor seleção de jogos para atender a todos os gostos e preferências. </p>
+                    <p> Na Games Shop, adoramos jogos! Desde os clássicos até as últimas novidades, estamos aqui para
+                        oferecer a melhor seleção para todos os jogadores. </p>
                     </br>
-                    <p>Fundada por entusiastas de jogos há mais de uma década, a Games Shop nasceu do desejo de criar um
-                        espaço onde os jogadores pudessem encontrar tudo o que precisam sob o mesmo teto. Nossa equipe é
-                        composta por pessoas apaixonadas por jogos, prontas para oferecer orientação especializada e
-                        recomendações personalizadas para cada cliente.</p>
+                    <p>Somos uma equipe apaixonada por jogos, pronta para ajudar você a encontrar o jogo perfeito e
+                        proporcionar experiências incríveis. Desde eventos divertidos até suporte técnico, estamos aqui
+                        para você.</p>
                     </br>
-                    <p>Na Games Shop, não se trata apenas de vender jogos, mas de construir uma comunidade. Estamos
-                        dedicados a proporcionar experiências memoráveis, desde eventos de lançamento de jogos até
-                        competições emocionantes e noites de jogos para reunir amigos e famílias.</p>
-                    </br>
-                    <p> Além disso, estamos comprometidos com a excelência no atendimento ao cliente. Nossa equipe está
-                        sempre à disposição para ajudá-lo a encontrar o jogo perfeito, fornecer suporte técnico ou
-                        simplesmente compartilhar uma conversa sobre seus jogos favoritos.</p>
-                    </br>
-                    <p> Obrigado por fazer parte da comunidade Games Shop. Estamos ansiosos para ajudá-lo a descobrir
-                        novos
-                        mundos de diversão e aventura!</p>
+                    <p>Obrigado por fazer parte da comunidade Games Shop. Vamos jogar juntos!</p>
+
                 </article>
 
             </div>
@@ -70,9 +58,42 @@
     </section>
 
     <!-- CORPO CONTATO -->
-    <section>
+    <section id="contato">
+        <div class="container">
+            <h2>CONTATO</h2>
+            <div class="metodos">
 
+
+                <div>
+                    <h3>Fale conosco</h3>
+                    <form>
+
+                        <input type="text" placeholder="Seu nome" required>
+                        <input type="email" placeholder="Seu e-mail" required>
+                        <input type="tel" placeholder="Seu telefone (opcional)">
+                        <textarea placeholder="Deixe sua mensagem" required></textarea>
+                        <button type="submit">Enviar</button>
+
+                    </form>
+                </div>
+                <div>
+                    <div class="social">
+                        <h3>Nos acompanhe</h3>
+                        <img src="facebook.png">
+                        <img src="instagram.png">
+                        <img src="youtube.png">
+                    </div>
+                </div>
+
+                <div id="endereco">
+                    <h3>Venha até nós</h3>
+                    <p> Rua JavaScript n° 124, Vila HTML - São Paulo - SP</p>
+                </div>
+
+            </div>
+        </div>
     </section>
+
 
     <!-- RODAPE -->
     <footer>
