Finalizando detalhes + contato

--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Bungee&family=Jersey+25&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+href="https://fonts.googleapis.com/css2?family=Bungee&family=Jersey+25&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+
+        <link rel="shortcut icon" href="logo.png" />
 </head>
 
 <body>
 
     <!-- HEADER -->
-    <header>
+    <header id="inicio">
         <div class="container">
-            <h1>Games Shop</h1>
+            <img src="logo.png">
             <nav>
                 <ul>
                     <li> <a href="#sobre">Sobre a Loja</a> </li>
@@ -37,7 +39,7 @@
                     <img src="aaa.jpg">
                 </article>
 
-                <article>
+                <article id="descricao">
                     <p>
                     <h2>Sobre a loja</h2>
                     </p>
@@ -50,7 +52,12 @@
                         para você.</p>
                     </br>
                     <p>Obrigado por fazer parte da comunidade Games Shop. Vamos jogar juntos!</p>
-
+                </br>
+                <p><h2>Parceiros</h2></p>
+            </br>
+            <img src="xbox.png">
+            <img src="ps.png">
+            <img src="nintendo.png">
                 </article>
 
             </div>
@@ -79,9 +86,9 @@
                 <div>
                     <div class="social">
                         <h3>Nos acompanhe</h3>
-                        <img src="facebook.png">
-                        <img src="instagram.png">
-                        <img src="youtube.png">
+                        <a href="#inicio"> <img src="facebook.png"> </a>
+                        <a href="#inicio"> <img src="instagram.png"></a>
+                        <a href="#inicio"> <img src="youtube.png"> </a>
                     </div>
                 </div>
 
