--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Shop - A sua loja de games</title>
+    <!-- GOOGLE FONTS -->
     <link rel="stylesheet" href="./main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-href="https://fonts.googleapis.com/css2?family=Bungee&family=Jersey+25&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Bungee&family=Jersey+25&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-
-        <link rel="shortcut icon" href="logo.png" />
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="imagens/logo.png" />
 </head>
 
 <body>
@@ -20,7 +21,7 @@ href="https://fonts.googleapis.com/css2?family=Bungee&family=Jersey+25&family=Ro
     <!-- HEADER -->
     <header id="inicio">
         <div class="container">
-            <img src="logo.png">
+            <img src="imagens/logo.png">
             <nav>
                 <ul>
                     <li> <a href="#sobre">Sobre a Loja</a> </li>
@@ -36,7 +37,7 @@ href="https://fonts.googleapis.com/css2?family=Bungee&family=Jersey+25&family=Ro
             <div class="articles">
 
                 <article>
-                    <img src="aaa.jpg">
+                    <img src="imagens/loja.jpg">
                 </article>
 
                 <article id="descricao">
@@ -52,12 +53,14 @@ href="https://fonts.googleapis.com/css2?family=Bungee&family=Jersey+25&family=Ro
                         para você.</p>
                     </br>
                     <p>Obrigado por fazer parte da comunidade Games Shop. Vamos jogar juntos!</p>
-                </br>
-                <p><h2>Parceiros</h2></p>
-            </br>
-            <img src="xbox.png">
-            <img src="ps.png">
-            <img src="nintendo.png">
+                    </br>
+                    <p>
+                    <h2>Parceiros</h2>
+                    </p>
+                    </br>
+                    <img src="imagens/xbox.png">
+                    <img src="imagens/ps.png">
+                    <img src="imagens/nintendo.png">
                 </article>
 
             </div>
@@ -72,6 +75,7 @@ href="https://fonts.googleapis.com/css2?family=Bungee&family=Jersey+25&family=Ro
 
 
                 <div>
+                    <!-- FORMULARIO -->
                     <h3>Fale conosco</h3>
                     <form>
 
@@ -84,14 +88,15 @@ href="https://fonts.googleapis.com/css2?family=Bungee&family=Jersey+25&family=Ro
                     </form>
                 </div>
                 <div>
+                    <!-- LINKS -->
                     <div class="social">
                         <h3>Nos acompanhe</h3>
-                        <a href="#inicio"> <img src="facebook.png"> </a>
-                        <a href="#inicio"> <img src="instagram.png"></a>
-                        <a href="#inicio"> <img src="youtube.png"> </a>
+                        <a href="#inicio"> <img src="imagens/facebook.png"> </a>
+                        <a href="#inicio"> <img src="imagens/instagram.png"></a>
+                        <a href="#inicio"> <img src="imagens/youtube.png"> </a>
                     </div>
                 </div>
-
+                <!-- ENDEREÇO -->
                 <div id="endereco">
                     <h3>Venha até nós</h3>
                     <p> Rua JavaScript n° 124, Vila HTML - São Paulo - SP</p>
