Finalização do trabalho

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
             <img src="imagens/logo.png">
             <nav>
                 <ul>
-                    <li> <a href="#sobre">Sobre a Loja</a> </li>
-                    <li> <a href="#contato">Contato</a> </li>
-                    <li><a href="#suporte">Suporte</a> </li>
-                    <li><a href="#projeto">Projeto</a></li>
+                    <li> <a href="#sobre" title="Ir para a seção sobre a loja">Sobre a Loja</a> </li>
+                    <li> <a href="#parceiros" title="Ir para a seção de Parceiros">Parceiros</a> </li>
+                    <li><a href="#projeto" title="Ir para a seção de Projetos">Projetos</a></li>
+                    <li><a href="#suporte" title="Ir para a seção de suporte">Suporte</a> </li>
+                    <li> <a href="#contato" title="Ir para a seção de contatos">Contato</a> </li>
                 </ul>
             </nav>
         </div>
@@ -39,7 +40,7 @@
             <div class="articles">
 
                 <article>
-                    <img src="imagens/loja.png">
+                    <img src="imagens/loja.png" alt="imagem da sede games shop">
                 </article>
 
                 <article id="descricao">
@@ -57,7 +58,7 @@
                     <p>Obrigado por fazer parte da comunidade Games Shop. Vamos jogar juntos!</p>
                     </br>
                     <p>
-                    <h2>Parceiros</h2>
+                    <h2 id="parceiros">Parceiros</h2>
                     </p>
                     </br>
                     <img src="imagens/xbox.png">
@@ -72,16 +73,19 @@
     <!-- PROJETO -->
     <section id="projeto">
         <div class="container">
-            <article>
+            <article id="lista">
                 <h2>Projeto</h2>
                 <ul>
                     <li> Expandir a presença da Games Shop em novos mercados geográficos.</li>
+                    </br>
                     <li>Aumentar as vendas e a receita por meio da abertura de novas filiais.</li>
+                    </br>
                     <li>Oferecer uma experiência excepcional ao cliente em cada localização.</li>
+                    </br>
                     <li>Consolidar a posição da Games Shop como líder no setor de entretenimento digital.</li>
                 </ul>
             </article>
-            <article><img src="imagens/futuro.jpg"></article>
+            <article><img src="imagens/futuro.jpg" alt="Imagens da Game Shop em um dia da semana"></article>
         </div>
 
     </section>
@@ -90,7 +94,7 @@
     <section id="suporte">
         <div class="container">
             <article>
-                <img src="imagens/assistente.png">
+                <img src="imagens/assistente.png" alt="Iagem de uma assistente da Games Shop">
             </article>
 
             <article>
@@ -99,7 +103,7 @@
                 <p> Suporte 24 horas com humanos! Tire qualquer duvida ou resolve seu problema ja.
                     Entre em contato com nossa equipe!</p>
                 </br>
-                </br> <a href="#contato">Entrar</a>
+                </br> <a href="#contato" title="Ir para o suporte humanizado">Entrar</a>
             </article>
         </div>
     </section>
@@ -128,9 +132,12 @@
                     <!-- LINKS -->
                     <div class="social">
                         <h3>Nos acompanhe</h3>
-                        <a href="#inicio"> <img src="imagens/facebook.png"> </a>
-                        <a href="#inicio"> <img src="imagens/instagram.png"></a>
-                        <a href="#inicio"> <img src="imagens/youtube.png"> </a>
+                        <a href="#inicio" title="Ir para o facebook da Games Shop"> <img src="imagens/facebook.png"
+                                alt="logo do facebook"> </a>
+                        <a href="#inicio" title="Ir para o instagram da Games Shop"> <img src="imagens/instagram.png"
+                                alt="logo do instagram"></a>
+                        <a href="#inicio" title="Ir para o youtube da Games Shop"> <img src="imagens/youtube.png"
+                                alt="logo do youtube"> </a>
                     </div>
                 </div>
                 <!-- ENDEREÇO -->
